--- a/src/Components/TodoListItem.module.css
+++ b/src/Components/TodoListItem.module.css
@@ -1,3 +1,11 @@
 .listItem {
     color: blue;
+    font-size: 16px;
+    display: flex;
+    justify-content: space-between;
+   
+}
+
+.listItem_container {
+  border: 3px solid black;
 }
