--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 
 body {
     font-family: 'Inter', sans-serif;
-    background: #83a4d4; /* fallback for old browsers */
-    background: linear-gradient(to left, #806cc9, #aac1e4);
+   
   }
+
+/*
+ background: #83a4d4; /fallback for old browsers/
+ background: linear-gradient(to left, #806cc9, #aac1e4);
+
+*/
