--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,12 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Roboto:wght@100&display=swap');
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Inter', sans-serif;
+    box-sizing: border-box;
+
 }
 
 .app_container {
     margin-left: 0px;
-    height: 100vw;
-    padding: 20px;
+    padding: 0;
     color: #171212;
-    
+    text-align: center;
 }
+
