--- a/src/App.module.css
+++ b/src/App.module.css
@@ -14,3 +14,35 @@
     text-align: center;
 }
 
+
+/*Main layout with grid*/
+
+.todoCont_split_box {
+    display: grid;
+    grid-template-columns: 150px 1fr 200px;
+    grid-template-rows: 50px 1fr;
+    height: 100vh;
+}
+
+
+.todoCont_MainNav {
+    background-color: rgb(244, 221, 193);
+    grid-column: 1 / -1;
+
+}
+
+.todoCont_lelf_pane_sideBar {
+    background-color: rgb(244, 221, 193);
+    grid-row: 2/ -1;
+
+    
+}
+
+.todoCon_middle_pane_todoList {
+    background-color: rgb(225, 209, 240);
+}
+
+.todoCon_right_pane_description {
+    background-color: rgb(218, 205, 189);
+}
+
