--- a/src/App.module.css
+++ b/src/App.module.css
@@ -34,20 +34,20 @@ Before the idea of doing flexbox on todo container. just deleted one colunm
 }
 
 .todoCont_MainNav {
-    background-color: rgb(244, 221, 193);
+    background-color: #d7c0b5;
     grid-column: 1 / -1;
 
 }
 
 .todoCont_lelf_pane_sideBar {
-    background-color: rgb(244, 221, 193);
+    background-color: #faf2f0;
     grid-row: 2/ -1;
 
     
 }
 
 .todoCon_middle_pane_todoList {
-    background-color: rgb(225, 209, 240);
+    background-color: #faf2f0;
 }
 
 /* .todoCon_right_pane_description {
