--- a/src/UI/SideVar/SideBar.module.css
+++ b/src/UI/SideVar/SideBar.module.css
@@ -32,8 +32,8 @@
 /* conditional redenring in the class name inside the nav tag */
 
 .nav_menu {
-    background-color: rgb(244, 221, 193);
-    width: 150px;
+    background-color: #faf2f0;
+    width: 250px;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -43,13 +43,13 @@
     transition: 850ms;
 }
 .nav_menu_active {
-    background-color: rgb(244, 221, 193);
-    width: 150px;
+    background-color: #faf2f0;
+    width: 250px;
     height: 100vh;
     display: flex;
     justify-content: center;
     position: fixed;
-    top: 0;
+    top: 50px;
     left: 0;
     transition: 350ms;
 
@@ -93,7 +93,7 @@
 /* x icon functionality */
 
 .navbar_toggle {
-    background-color: rgb(244, 221, 193);
+    background-color: #faf2f0;
     width: 100%;
     height: 80px;
     display: flex;
