--- a/src/TodoContainer/Components/ItemDescription.module.css
+++ b/src/TodoContainer/Components/ItemDescription.module.css
@@ -10,7 +10,7 @@
     height: 100vh;
     width: 400px;
     border-style:  2px solid rgb(123, 123, 123);
-    background-color: #faf2f0;
+    background-color: #fdfdff;
     
 
 
