--- a/src/UI/SideVar/SideBar.module.css
+++ b/src/UI/SideVar/SideBar.module.css
@@ -1,5 +1,5 @@
 /*Icons */
-
+ 
 .icon_menu {
     stroke: rgba(52, 49, 49, 0.975);
     width: 24px;
@@ -21,37 +21,29 @@
 
 /*sidebar*/
 
-/*x icon with the link tag*/
-
-.menu_bars {
-    margin-left: 2rem;
-    font-size: 2rem;
-    background: none;  
-}
-
 /* conditional redenring in the class name inside the nav tag */
 
 .nav_menu {
-    background-color: #faf2f0;
-    width: 250px;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    left: -100%;
-    transition: 850ms;
-}
-.nav_menu_active {
-    background-color: #faf2f0;
+    background-color: #fdfdff;
     width: 250px;
     height: 100vh;
     display: flex;
     justify-content: center;
     position: fixed;
     top: 50px;
+    left: -100%;
+    transition: 600ms;
+}
+.nav_menu_active {
+    background-color: #fdfdff;
+    width: 250px;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    top: 60px;
     left: 0;
-    transition: 350ms;
+    transition: 250ms;
 
 }
 
@@ -90,14 +82,4 @@
     background-color: #92b9e5;
 }
 
-/* x icon functionality */
-
-.navbar_toggle {
-    background-color: #faf2f0;
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-}
 
