--- a/src/TodoContainer/TodoContainer.module.css
+++ b/src/TodoContainer/TodoContainer.module.css
@@ -1,20 +1,35 @@
-/*grid instead*/
+/*grid*/
 
 .split_box {
     display: grid;
-    grid-template-columns: 1fr 400px;
+    grid-template-columns: 1fr 300px;
     height: 100vh;
 
 }
 
 .right_pane {
     background-color: #fdfdff;
+    
 }
 
 .left_pane {
     background-color: #fdfdff;
     border: 1px solid rgb(123, 123, 123);
     border-right: none;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+/*todo list title*/
+
+.tableId {
+    font-weight: 250;
+    font-size: 23px;
+    padding-top: 15px;
+    padding-left: 15px;
+    position: fixed;
+    top: 50px;
 }
 
 
