added typeprops and some styling

--- a/src/TodoContainer/Components/AddTodoForm.module.css
+++ b/src/TodoContainer/Components/AddTodoForm.module.css
@@ -1,13 +1,20 @@
 .label_container {
-    border: 2px solid black;
-    display: flex;
-    align-items: center;
     margin-top: 60px;
-    
+    /* border: 2px solid black; */
+    display: flex;
+    justify-content: flex-start;
+    padding: 5px 5px 5px 5px;
 }
 
-
-
 .add_button {
-    align-self: flex-end;
+    /* margin-left: 173px; */
+    background-color: #f3f3f3;;
+    color: #393d40;
+    width: 30px;
+    height: 30px;
+    border-color: #62929e;;
+    border-top: 1px;
+    border-left: none;
+    border-bottom: 1px;
+    border-right: 1px;
 }
