Added DELETE and POST calls to delete and addToDo functions. Added some CSS module styling

--- a/src/ToDoList.module.css
+++ b/src/ToDoList.module.css
@@ -1,12 +1,32 @@
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 .Root {
-    background-color: rgb(54,73,78);
+    color: rgb(38, 49, 52);
+    background-color: rgb(0,159,183);
     font-family: Arial;
+    display: flex;
     justify-content: center;
+    align-items: center;
+    margin: 0px;
+}
+
+.Header {
+    color: rgb(38, 49, 52);
+    background-color: rgb(254,215,102);
+    padding: 5px;
+    margin: 0px;
+    height: 3em;
+}
+
+.Container {
     padding: 10px;
+    margin: 0px;
 }
 
 .ListItem {
-    color:rgb(147, 228, 250);
     border: 4px, solid, rgb(227, 214, 231);
     width: 80%;
     margin-bottom: 35px;
@@ -14,7 +34,16 @@
 
 .RemoveButton {
     border: 'none';
-    background-image: "./public/Images/trashIcon.png";
-    width: 30px;
-    
+    background-image: url(./Images/trashIcon.png);
+    width: 25px;
+    height: 25px;
+    margin: 5px 5px;
+}
+
+body {
+    background-color: rgb(0,159,183);
+}
+
+h1, h2, h3, h4 {
+    color: rgb(38, 49, 52);
 }
