--- a/src/TodoContainer/Components/AddTodoForm/AddTodoForm.module.css
+++ b/src/TodoContainer/Components/AddTodoForm/AddTodoForm.module.css
@@ -1,10 +1,13 @@
 .label_container {
-    margin-top: 60px;
+    margin-top: 90px;
+    margin-left: 5px;
+    margin-right: 5px;
     /* border: 2px solid black; */
     display: flex;
     justify-content: flex-start;
     padding: 5px 5px 5px 5px;
-}
+
+} 
 
 .add_button {
     /* margin-left: 173px; */
