--- a/src/TodoContainer/Components/InputWithLabel/InputWithLabel.module.css
+++ b/src/TodoContainer/Components/InputWithLabel/InputWithLabel.module.css
@@ -4,5 +4,7 @@
     outline-color: #62929e;
     width: 100%;
     height: 30px;
-    
+    padding-left: 8px;
+    font-size: 14px;
+    border-radius: 3px;
 }
