--- a/public/index.css
+++ b/public/index.css
@@ -10,4 +10,9 @@ body {
  background: linear-gradient(to left, #806cc9, #aac1e4);
 
 */
-
+html {
+  height: 100%;
+}
+ body {
+  min-height: 100%;
+ }
