--- a/src/TodoContainer/Components/ItemDescription/ItemDescription.module.css
+++ b/src/TodoContainer/Components/ItemDescription/ItemDescription.module.css
@@ -5,14 +5,45 @@
 }
   
   
-.text_el {
-    height: 50vh;
-    width: 200px;
-    /* border-style:  1px solid rgb(123, 123, 123); */
-    background-color: #fdfdff;
-    outline: none;
-    /* border: none; */
-    resize: none;
-    
+
+
+/*------------ Description text section ---------------*/
+
+.button {
+    background-color: var(--primary);
+    border: none;
+    color: var(--secondary);
+    border-radius: 3px;
+    padding: 5px;
+    width: 12rem;
+    margin-left: 3px;
 }
 
+.button:hover {
+   background-color: var(--button-hover); 
+}
+
+.title {
+   /* font-style: oblique;  */
+   font-size: 15px;
+   font-weight: bold;
+   display: block;
+   padding-top: 15px;
+   padding-left: 5px;
+}
+
+.text_area {
+    margin-top: 1rem;
+    padding-top: 5px;
+    padding-left: 5px;
+    content: center;
+    height: 50vh;
+    width: 200px;
+    background-color: var(--secondary);
+    outline: none;
+    resize: none;
+    border: 1px solid var(--borders);
+    border-left: none;
+    border-right: none;
+    font-size: 14px;
+}
