--- a/src/TodoContainer/Components/TodoListItem/TodoListItem.module.css
+++ b/src/TodoContainer/Components/TodoListItem/TodoListItem.module.css
@@ -1,10 +1,3 @@
-/*---- div tag is no being used*/
-
-/* .listItem_container {
- 
-
-} */  
-
 
 /* -------li TAG --------*/
 .listItem{
@@ -33,6 +26,10 @@
   border-bottom: 1px solid #c2c2c2;
 }
 
+.item_text {
+  align-self: flex-start;
+ 
+}
 
 
 /* ------ BUTTONS_ICONS ------*/
@@ -48,7 +45,7 @@ opacity: 1;
   opacity: 0.5; 
 }
 
-
+  
 
 /* -----input tag this css trigges when the user wants to edit a task -----*/
 
@@ -62,6 +59,13 @@ opacity: 1;
   padding-left: 5px;
   font-size: 14px;
 } 
+
+
+/* ---------- checkbox -----------*/
+
+.checkbox {
+  accent-color: var(--primary);
+}
 
 
 
