--- a/src/TodoContainer/TodoContainer.module.css
+++ b/src/TodoContainer/TodoContainer.module.css
@@ -57,6 +57,8 @@ so it can works with all the reused components*/
     margin-right: 200px;
   }
 
+
+
 /*Button*/
 
 .sort_button {
@@ -64,4 +66,6 @@ so it can works with all the reused components*/
   width: 24px;
   height: 24px;
   opacity: 1;
+  margin-left: 1rem;
+  margin-top: 1rem;
 }
