--- a/src/UI/NavMain.module.css
+++ b/src/UI/NavMain.module.css
@@ -37,3 +37,18 @@
     border-bottom: 1px solid #c2c2c2;
     height: 50px;
  }
+
+
+ /*---- Nav main -----*/
+ .name {
+    margin: 0;
+    padding: 0;
+    display: block;
+    margin-bottom: 70rem;
+    margin-left: 85rem;
+    padding-top: 1rem;
+    position: fixed;
+    font-size: 16px;
+    font-weight: bold;
+    color: #f4f4f4;
+ }
