--- a/src/UI/NavMain.module.css
+++ b/src/UI/NavMain.module.css
@@ -40,15 +40,15 @@
 
 
  /*---- Nav main -----*/
- .name {
+ /* .name {
     margin: 0;
     padding: 0;
     display: block;
     margin-bottom: 70rem;
     margin-left: 85rem;
     padding-top: 1rem;
-    position: fixed;
+    position:absolute;
     font-size: 16px;
     font-weight: bold;
     color: #f4f4f4;
- }
+ } */
