added final styles with media query

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,25 +6,13 @@
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;
-    box-sizing: border-box;
-    /* overflow-y: auto; */
-   
+    box-sizing: border-box; 
 }
 
 /*Hide scrollbar*/
 ::-webkit-scrollbar {
     display: none;
 }
-
-
-
-.app_container {
-    margin-left: 0px;
-    padding: 0;
-    color: #393d40;
-    text-align: center;
-}
-
 
 /*Main layout with grid*/
 
@@ -34,6 +22,7 @@
     grid-template-rows: 50px 1fr;
     height: 100vh;
     /* width: 100vw; */
+    grid-template-areas: "todoCont_lelf_pane_sideBar"
 
 }
 
@@ -49,18 +38,6 @@
     grid-row: 2/ -1;
 
     
-}
-
-/*Sidebar hidden and appear*/
-
-.left_menu_active {
-   opacity: 1;  
-   visibility: visible;
-}
-
-.left_menu_done {
- opacity: 0;
- visibility: hidden;   
 }
  
 .todoCon_middle_pane_todoList {
@@ -85,6 +62,49 @@
   } 
 
 /*Media queries*/
+/*
+ rem and em do Not depend on html font-size in media queries, instead
+ 1rem = 1em = 16px
+*/
+
+/* Desktop styles*/
+/* Below 820px  smaller compouter to get this value divide 820 and 16px*/
+
+@media (max-width: 51em) {
+    .todo_container {
+        margin-left: 55px;
+        
+        
+      }
+      .todo_container.active {
+        padding-left: 1px;
+        
+       
+      } 
+
+      .todoCon_middle_pane_todoList {
+        background-color: #fdfdff;
+        grid-row: 2/ -1;
+        padding-left: 1px;
+        position: relative;
+    }
+
+    .todoCont_lelf_pane_sideBar {
+        background-color: #fdfdff;
+        
+    }
+
+
+}
+
+/*This is 1112px */
+
+@media (max-width: 70em) {
+    .todoCon_middle_pane_todoList {
+        padding-left: 0px;
+    }
+}
+
 
 /*Mobile styles*/
 
@@ -100,8 +120,3 @@
 
 }
 
-/* Desktop styles*/
-
-@media screen and (min-width: 1200px) {
-
-}
