--- a/src/TodoContainer/Components/ItemDescription/ItemDescription.module.css
+++ b/src/TodoContainer/Components/ItemDescription/ItemDescription.module.css
@@ -4,8 +4,6 @@
     list-style: none;
 }
   
-  
-
 
 /*------------ Description text section ---------------*/
 
@@ -17,6 +15,7 @@
     padding: 5px;
     width: 12rem;
     margin-left: 3px;
+    cursor: pointer;
 }
 
 .button:hover {
@@ -46,4 +45,24 @@
     border-left: none;
     border-right: none;
     font-size: 14px;
+}
+
+/*Media query for mobile 530px*/
+
+@media (max-width: 35em) {
+    .text_area {
+      width: 100%;
+      height: 25vh;
+    }
+
+    .button {margin-left: 10rem;}
+}
+
+
+
+/*This for mobile 330 px*/
+@media (max-width: 30em) { 
+   .button {
+    margin-left: 7rem;
+   }
 }
