--- a/src/TodoContainer/Components/TodoListItem/TodoListItem.module.css
+++ b/src/TodoContainer/Components/TodoListItem/TodoListItem.module.css
@@ -16,19 +16,21 @@
     margin-top: 10px;
     border-bottom: 1px solid #c2c2c2;
     border-radius: 3px;
+    gap: 10px;
    
-}
-
-.toggle_items {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 10px;
-  border-bottom: 1px solid #c2c2c2;
 }
 
 .item_text {
   align-self: flex-start;
+  margin-right: auto;
+  text-align: left;
+  padding-top: 8px;
+  overflow: auto;
  
+}
+
+.item_text:hover {
+  opacity: 0.5;
 }
 
 
@@ -39,6 +41,7 @@ color: #393d40;
 width: 23px;
 height: 23px;
 opacity: 1;
+cursor: pointer;
 }
 
 .icons:hover {
@@ -52,19 +55,36 @@ opacity: 1;
 .edit_input {
   background-color: #f3f3f3;
   border: none;
-  outline: none;
+  /* outline: none; */
   width: 100%;
   height: 30px;
-  color: #ffa228;
+  color: black;
+  font-weight: bold;
   padding-left: 5px;
   font-size: 14px;
 } 
+
+.form {
+  cursor: pointer;
+  position: absolute;
+  left: 10rem;
+}
 
 
 /* ---------- checkbox -----------*/
 
 .checkbox {
   accent-color: var(--primary);
+}
+
+
+/*Media Queries*/
+/*Mobile view 330px*/
+@media (max-width: 25em) {
+  .listItem {
+    padding-top: 1px;
+    
+  }
 }
 
 
