--- a/src/UI/NavMain.module.css
+++ b/src/UI/NavMain.module.css
@@ -6,17 +6,14 @@
     height: 24px;
 
 }
-  
+
+.icon_menu:hover {
+    opacity: 0.5; 
+}
 
 /*li elements inside of the navBar*/
 .nav_list {
-    /* border: 5px solid black; */
     list-style: none;
-    /* display: flex;
-    align-items: row;
-    color: black;
-    gap: 4.8rem;
-    justify-content:flex-start; */
     margin-left: 6rem;
     padding-top: 13px;
 
@@ -38,17 +35,3 @@
     height: 50px;
  }
 
-
- /*---- Nav main -----*/
- /* .name {
-    margin: 0;
-    padding: 0;
-    display: block;
-    margin-bottom: 70rem;
-    margin-left: 85rem;
-    padding-top: 1rem;
-    position:absolute;
-    font-size: 16px;
-    font-weight: bold;
-    color: #f4f4f4;
- } */
