--- a/src/TodoContainer/Components/ItemDescription/ItemDescription.module.css
+++ b/src/TodoContainer/Components/ItemDescription/ItemDescription.module.css
@@ -14,7 +14,7 @@
     border-radius: 3px;
     padding: 5px;
     width: 12rem;
-    margin-left: 3px;
+    margin-left: 3rem;
     cursor: pointer;
 }
 
@@ -37,7 +37,7 @@
     padding-left: 5px;
     content: center;
     height: 50vh;
-    width: 200px;
+    width: 270px;
     background-color: var(--secondary);
     outline: none;
     resize: none;
@@ -52,7 +52,7 @@
 @media (max-width: 35em) {
     .text_area {
       width: 100%;
-      height: 25vh;
+      height: 14vh;
     }
 
     .button {margin-left: 10rem;}
