--- a/src/TodoContainer/Components/TodoListItem/TodoListItem.module.css
+++ b/src/TodoContainer/Components/TodoListItem/TodoListItem.module.css
@@ -55,7 +55,7 @@ cursor: pointer;
 .edit_input {
   background-color: #f3f3f3;
   border: none;
-  /* outline: none; */
+  outline: none;
   width: 100%;
   height: 30px;
   color: black;
