--- a/react-todo-app/src/Components/TodoList/TodoList.module.css
+++ b/react-todo-app/src/Components/TodoList/TodoList.module.css
@@ -1,9 +1,38 @@
-/* .ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+.todoList li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  font-size: 18px;
+  color: #333;
+  border-bottom: 1px solid #ccc;
 }
 
-.ul li {
-  border-bottom: 1px solid #e2e2e2;
-} */
+.todoList li:last-child {
+  border-bottom: none;
+}
+
+.todoList li .text {
+  flex-grow: 1;
+}
+
+.todoList li .button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  margin-left: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.todoList li .button:hover {
+  background-color: #0056b3;
+}
+
+@media screen and (max-width: 600px) {
+  .todoList li {
+    font-size: 16px;
+  }
+}
