--- a/react-todo-app/src/App.module.css
+++ b/react-todo-app/src/App.module.css
@@ -118,3 +118,9 @@
 
 @media screen and (min-width: 620px) {
 }
+
+@media screen and (min-width: 960px) {
+  .todoCon_middle_pane_todoList {
+    padding-left: 5px;
+  }
+}
