--- a/react-todo-app/src/App.module.css
+++ b/react-todo-app/src/App.module.css
@@ -3,7 +3,6 @@
   --background-color: #f0e5cf;
   --transition-duration: 0.25s;
 }
-/*background-color: var(--secondary-color);*/
 
 /*Fonts*/
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Roboto:wght@100&display=swap");
@@ -52,13 +51,15 @@
 /*Try moving middle pane when the sidebar appears*/
 .todo_container {
   margin-left: 250px;
-  transition: left 0.25s;
+  transition: left var(--transition-duration);
 }
+
 .todo_container.active {
   padding-left: 250px;
   overflow: hidden;
-  transition: left 0.25s;
+  transition: left var(--transition-duration);
 }
+
 .imageContainer {
   position: fixed;
   top: 0;
@@ -93,9 +94,13 @@
 @media (max-width: 51em) {
   .todo_container {
     margin-left: 55px;
+    transition: left var(--transition-duration);
   }
+
   .todo_container.active {
     padding-left: 1px;
+    overflow: hidden;
+    transition: left var(--transition-duration);
   }
 
   .todoCon_middle_pane_todoList {
@@ -108,6 +113,48 @@
   .todoCont_left_pane_sideBar {
     background-color: #fdfdff;
   }
+}
+
+/* Modal styles */
+.modalContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
+
+.closeButton {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background-color: transparent;
+  color: #000;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.modalImage {
+  max-width: 100%;
+  max-height: 90vh;
 }
 
 @media (max-width: 70em) {
