--- a/react-todo-app/src/TodoContainer/Components/TodoListItem/TodoListItem.module.css
+++ b/react-todo-app/src/TodoContainer/Components/TodoListItem/TodoListItem.module.css
@@ -1,21 +1,28 @@
-/* -------li tag --------*/
 .listItem {
   background-color: #f3f3f3;
   margin-left: 10px;
   margin-right: 10px;
   color: #393d40;
   font-size: 14px;
-  min-height: 40px; /* set minimum height */
+  min-height: 45px; /* set minimum height */
   padding: 8px;
+  padding-bottom: 5px;
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
   border-bottom: 1px solid #c2c2c2;
   border-radius: 3px;
   gap: 10px;
+  width: 100%;
 }
 
 .listItem_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  align-self: flex-start;
+  justify-content: space-between;
 }
 
 .item_text {
@@ -34,8 +41,8 @@
 
 .icons {
   color: #393d40;
-  width: 23px;
-  height: 23px;
+  width: 20px;
+  height: 20px;
   opacity: 1;
   cursor: pointer;
 }
