--- a/react-todo-app/src/TodoContainer/TodoContainer.module.css
+++ b/react-todo-app/src/TodoContainer/TodoContainer.module.css
@@ -74,11 +74,12 @@
 
 /*Image Component*/
 .image_link {
-  width: 14rem;
+  width: 11rem;
   height: 10rem;
   display: block;
   margin: 0 auto;
   padding-top: 15px;
+  cursor: pointer;
 }
 
 /*Sort button*/
@@ -97,6 +98,40 @@
   display: block;
   margin-left: 1rem;
   margin-top: 3px;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 10vh;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 80vh;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 50%;
+  max-width: 700px;
+  height: auto;
+  max-height: 80%;
+}
+
+/* CSS for close button */
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  font-size: 40px;
+  font-weight: bold;
+  color: white;
+  z-index: 1;
+  cursor: pointer;
 }
 
 @media (max-width: 70em) {
