--- a/react-todo-app/src/TodoContainer/Components/ItemDescription/ItemDescription.module.css
+++ b/react-todo-app/src/TodoContainer/Components/ItemDescription/ItemDescription.module.css
@@ -2,76 +2,98 @@
   --primary-color: #6ca0dc;
   --background-color: #fdfdff;
   --transition-duration: 0.25s;
+  --borders: rgb(235, 209, 209);
 }
 
-/*Unordered list tag */
-.ul_el {
-  list-style: none;
-}
-.li_el {
+ul,
+li {
   list-style: none;
 }
 
-/*------------ Description text section ---------------*/
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.button-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* height: 100%; */
+  text-align: center;
+}
 
 .button {
   background-color: var(--primary-color);
-  border: none;
-  color: var(--secondary);
+  border: 1px;
+  color: white;
   border-radius: 5px;
   padding: 5px;
+  margin: auto;
   width: 12rem;
-  margin-left: 3rem;
   cursor: pointer;
+  text-align: center; /* Center text horizontally */
+  text-decoration: none;
+  transition: background-color var(--transition-duration),
+    transform var(--transition-duration);
+  display: flex; /* Make the button a flex container */
+  justify-content: center; /* Center the child element (text) horizontally */
+  align-items: center; /* Center the child element (text) vertically */
 }
 
 .button:hover {
-  background-color: #ff4500;
+  background-color: #31e163;
+  transform: scale(1.1);
+  box-shadow: 1px 1px 3px #d96767;
+  border: 2px;
+  border-color: #4000ff;
 }
-
-
 
 .title {
   /* font-style: oblique;  */
-  font-size: 15px;
+  font-size: 16px;
   font-weight: bold;
   display: block;
-  padding-top: 15px;
+  padding: 15px;
+  margin-left: 0px;
   padding-left: 5px;
+  text-align: center;
 }
 
 .text_area {
-  margin-top: 1rem;
+  margin-top: 10px;
+  margin-right: 20px;
   padding-top: 5px;
   padding-left: 5px;
+  padding-right: 15px;
   content: center;
-  height: 50vh;
-  width: 270px;
+  min-height: 60vh;
+  width: 330px;
   background-color: var(--background-color);
   outline: none;
   resize: none;
-  border: 1px solid var(--borders);
-  border-left: none;
-  border-right: none;
+  /* border: 1px solid var(--borders); */
+  border: none;
+  /* border-right: none; */
   font-size: 14px;
 }
-
-/*Media query for mobile 530px*/
 
 @media (max-width: 35em) {
   .text_area {
     width: 100%;
-    height: 14vh;
+    min-height: 14vh;
   }
 
-  .button {
-    margin-left: 10rem;
+  .button-wrapper {
+    margin-left: 10px;
   }
 }
 
-/*This for mobile 330 px*/
 @media (max-width: 30em) {
-  .button {
-    margin-left: 7rem;
+  .button-wrapper {
+    margin-left: 7px;
   }
 }
